Ensures styles load

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="google" content="notranslate" />
     <meta http-equiv="Content-Language" content="en_US" />
 
-    <link rel="stylesheet" type="text/css" href="/styles.css" />
+    <link rel="stylesheet" type="text/css" href="./styles.css" />
   </head>
 
   <body>
