Clones opencv.js
I'm sure this isn't ideal BUT negates the need to load the resource
from the internet, which is nice for speedy local development

--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
       </div>
     </div>
 
-    <script src="https://docs.opencv.org/master/opencv.js"></script>
+    <!-- from https://docs.opencv.org/master/opencv.js -->
+    <script src="./opencv.js"></script>
     <script src="./processImage.js"></script>
   </body>
 </html>
