Fixup doc title

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
   <head>
     <meta charset="utf-8" />
-    <title>Private Prep Dashboard</title>
+    <title>bubbleSheetToCSV</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="google" content="notranslate" />
     <meta http-equiv="Content-Language" content="en_US" />
