Have image load on default
This makes development and demo nicer as you don't need to upload an
image with each change and attempt

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
       </div>
 
       <div class="grid">
-        <img id="imageOriginal" alt="No Image" />
-        <canvas id="imageCanvas"></canvas>
+        <canvas id="canvasInput"></canvas>
+        <canvas id="canvasOutput"></canvas>
       </div>
     </div>
 
