Adds quick pick button

--- a/index.html
+++ b/index.html
@@ -17,7 +17,11 @@
     <div class="container">
       <!-- accept and display an image -->
       <div class="grid">
-        <input id="imageInput" type="file" name="file" />
+        <div>
+          <button type="button" id="newImageButton">Pick New Image</button>
+          <input id="imageInput" type="file" name="file" />
+        </div>
+
         <button type="button" id="gradeButton" class="btn btn-primary">
           Grade Sheet
         </button>
